--- a/teamMembers.html
+++ b/teamMembers.html
@@ -93,9 +93,10 @@
       <p>Email Address: <a href="mailto:ntebalengelsieletaoana@gmail.com">ntebalengelsieletaoana@gmail.com</a></p>
       <p>Cell Number: +27765 6569 065</p>
       <p>Subteam: HTML</p>
-      <p>Description: Ntebaleng Letaoana is an aspiring Software Developer. She is currently a leaener in the Mindworx's Software development leanership under the Sage spondorship.She has a firm understanding of C#, .Net, Java programming and HTML. With an Accounting Science degree and a keen interest in tech, who knows? Diving into Data Scienece in the near future? Who knows, too soon.  </p>
-  </div>
-
+      <p>Description: Ntebaleng is currently a Software Development learner at Mindworx Academy.  She holds a bachelor's degree in Accounting Sciences from the University of the Witwatersrand. Having minored in Economics in her undergrad degree,  she understands the needs of an everyday consumer from an economic sense better, in turn she can project consumer's needs as well as what any user might deem necessary to have the best experience from an IT application. This came in handy in this project because we had to put ourselves in the position of the user of the library to build a web application that we would be keen to use if we were not the ones behind creating the library.
+       Coming from a field that is risk oriented and detail oriented, she finds has developed an immense love for programming because she is constantly asking herself : "What could go wrong in this code? what if this function fails? Is there a plan B? Are we missing something?".  Outside of HTML, she has firm understanding in C#, Java, CSS, Visiual Basic and JavaScript. </p>
+       </div>
+ 
      <div id="Khangwelo">
 
      <img src="https://media.licdn.com/dms/image/D4D03AQFG4_71NkmZyg/profile-displayphoto-shrink_800_800/0/1700155844720?e=1705536000&v=beta&t=_ESRFj3F-pHIxY9kQ0wHlA8NY0SbS1pqG1RoQQvMSGk"
