--- a/teamMembers.html
+++ b/teamMembers.html
@@ -63,11 +63,11 @@
                       alt="Profile Picture" width="200" height="200">
      
      <p>Name & Surname: Mabasa Matimba</p>
-     <p>LinkedIn Profile: <a href="https:" target="_blank">Mabasa Matimba</a></p>
+     <p>LinkedIn Profile: <a href="https:https://www.linkedin.com/in/matimbamabasa47a834233?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BFde%2BUpoaRGu2nTDeOcS6Mw%3D%3D" target="_blank">Mabasa Matimba</a></p>
      <p>Email Address: <a href="matimbaxip@gmail.com">matimbaxip@gmail.com</a></p>
      <p>Cell Number: +27(0)81 841 8416</p>
      <p>Subteam: HTML</p>
-     <p>Description: I am a dynamic professional with a diverse skill set, holding a Bachelor of Commerce in Accounting Sciences.</p>
+     <p>Description: I am a dynamic professional with a diverse skill set, holding a Bachelor of Commerce in Accounting Sciences from University of Venda, Currently enrolled on a  Systems development Learnership (NQF level 5) from Mindworx Academy.</p>
  </div>
     
         <div id="Phakamile">
