--- a/teamMembers.html
+++ b/teamMembers.html
@@ -143,7 +143,20 @@
          Description: I'm a motivated graduate from Tshwane University of Technology, holding an advance diploma in financial management  . I am currently enrolled at Mindworx Academy for the System Development NQF 5. I am skilled in SQL Server, Visual Basic .NET(VB.NET), C#, JAVA, HTML and Project management'
      </p>
      </div>
+    <div id="thabang">
+        <h2>thabang motloung</h2>
+        <p>picture:<img src=""</p>
+        <p> name &surname:Thabang motloung</p>
+        <p>linkedin profile:<a href=""</p>
+        target="blank"> thabang motloung
+        <p>email address:<a href="mailto:thabangmotloung1997@gmail.com</a>"</p>
+        <p>thabangmotloung1997@gmail.com</p>
+        <p>cell number:o6o4808673</p>
+        <p>subteam: html</p>
+        <p>linkedin : <a href="https://www.linkedin.com/in/thabang-motloung-73175129b/?lipi=urn%3Ali%3Apage%3Aprofile_common_profile_index%3Bfc57febe-1f7e-4acc-bc4e-63a250320081"</a></p>
+        <p>decription:hold a diploma in accounting from university of johannesburg</p>
 
+    </div>
 
     <div id="Funanani">
          <img src="raphulu_image.jpg" alt="Funanani Raphulu's picture">
