--- a/teamMembers.html
+++ b/teamMembers.html
@@ -14,7 +14,7 @@
             <li><a href="signIn.html"> SIGN IN</a></li>
             <li><a href="about.html"> ABOUT US</a></li>
             <li><a href="contacts.html"> CONTACT US</a></li>
-            <li><a href="teamMembers.html">TEAM MEMBER</a></li>
+            <li><a href="teamMembers.html">TEAM MEMBERS</a></li>
         </ul>
     </nav>
     <h1>Team that collaborated to Build the project of <acronym title="Sage Community Association">SCA</acronym></h1>
@@ -238,7 +238,7 @@
               alt="Edith's picture'">
      
      <p>Name & Surname: Edith Mashapo</p>
-     <p>LinkedIn Profile: <a href="linkedin.com/in/edith-mashapo-3802b6225" target="_blank">Edith Mashapo's LinkedIn</a></p>
+     <p>LinkedIn Profile: <a href="https://www.linkedin.com/in/edith-mashapo-3802b6225" target="_blank">Edith Mashapo's LinkedIn</a></p>
      <p>Email Address: <a href="mailto:edithmashapo@gmail.com">edithmashapo@gmail.com</a></p>
      <p>Cell Number: +2772 751 1962</p>
      <p>GitHub: <a href="https://github.com/EDITH-coder" target="_blank">Edith's GitHub acount</a></p>
