--- a/teamMembers.html
+++ b/teamMembers.html
@@ -33,6 +33,7 @@
         <li><a href="#Chris">Jump to Chris Maswanganye</a></li>
         <li><a href="#Edith">Jump to Edith Mashapo</a></li>
         <li><a href="#Thabang">Jump to Thabang Motloung</a></li>
+        <li><a href="#Onalerona">Jump to Onalerona Motsepe</a></li>
 
     </ul>
 </div>
@@ -257,6 +258,21 @@
     </p>
         
 
+</div>
+
+    <div id="Onalerona">
+   
+    <img src="Ona.jpj" alt="Picture of Onalerona" />
+    <p>Name & Surname: Onalerona Mosepe</p>
+    <p>Email Address: <a href="mailto:onaleronamotsepe97@gmail.com">onaleronamotsepe97@gmail.com</a></p>
+    <p>Cell Number: +2765 897 7979</p>
+    <p>Subteam:CSS</p>
+    <p>
+        Description: I'm a Financial Accounting graduate seeking to obtain an entry-level position in the Finance field.  Adept in verifying data, compiling information, and creating detailed financial reports. Skilled in performing research to ensure accuracy for all financial transactions. A Self Starter with a strong attention to detail. Driven and diligent with the ability to thrive in high pressure environments.
+        I am currently doing my Systems Development at Mindworx Academy and in this project I have learned some soft skills. Which are to work in a team, being patient and considerate. And I also learned and understood how to make the website work. I was in the CSS group and our role was to  define styles for our web pages, including the design, layout and variations in display for different devices and screen sizes.
+        There were a few challenges that we came across as a group (HTML,  JS & CSS group). One being our code nit running, but we were able to figure them out.
+        I have learned a lot while we were creating the library website and I can happily say I would be able to create a website on my own with the knowledge I have acquired from my team.
+    </p>
 </div>
 
 
