--- a/teamMembers.html
+++ b/teamMembers.html
@@ -262,7 +262,7 @@
 
     <div id="Onalerona">
    
-    <img src="Ona.jpj" alt="Picture of Onalerona" />
+    <img src="Ona.jpg" alt="Picture of Onalerona" />
     <p>Name & Surname: Onalerona Mosepe</p>
     <p>Email Address: <a href="mailto:onaleronamotsepe97@gmail.com">onaleronamotsepe97@gmail.com</a></p>
     <p>Cell Number: +2765 897 7979</p>
